samples/_failures_safe/1761534594_94f453_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25da6986.c: In function ‘main’:
./samples/SAFE/__tmp_25da6986.c:147:5: error: expected declaration or statement at end of input
  147 |     }
      |     ^
